--- a/maincontents.htm
+++ b/maincontents.htm
@@ -39,6 +39,7 @@
 <script>
     function headRoll()
     {
+        alert("in headRoll")
         var roll = -25;
         var velocity = 50;
         window.external.SetHeadRoll(roll, velocity);
