removed body modifications

--- a/maincontents.htm
+++ b/maincontents.htm
@@ -14,7 +14,7 @@
 </head>
 
 
-<body  onbeforeunload="JSUnload()" ondragstart="return false;" ondrop="return false;" style="-ms-user-select:none;" oncontextmenu="return false;">
+<body>
 
 <header>
     <div class="logo">
