--- a/maincontents.htm
+++ b/maincontents.htm
@@ -27,23 +27,38 @@
     <tr>
         <td>
             Roll: <input id="txt_roll" type="text" width="50">
-            Velocity: <input id="velocity" type="text" width="50">
+            Velocity: <input id="txt_velo1" type="text" width="50">
         </td>
         <td>
-            <button onclick="SetHeadRoll(-25,50)"> SetHeadRoll() </button>
+            <button onclick="setHeadRoll()"> SetHeadRoll() </button>
+        </td>
+    </tr>
+
+    <tr>
+        <td>
+            Yaw: <input id="txt_yaw" type="text" width="50">
+            Velocity: <input id="velo2" type="text" width="50">
+        </td>
+        <td>
+            <button onclick="setHeadYaw()"> SetHeadYaw() </button>
         </td>
     </tr>
 </table>
 
 
 <script>
-    function headRoll()
+    function setHeadRoll()
     {
-        alert("in headRoll")
-        var roll = -25;
-        var velocity = 50;
-        window.external.SetHeadRoll(roll, velocity);
 
+        var roll = document.getElementById("txt_roll").value;
+        var velocity = document.getElementById("txt_velo1").value;
+       SetHeadRoll(roll,velocity);
+    }
+
+    function setHeadYaw()
+    {
+        var yaw = document.getElementById("txt_yaw").value;
+        var velocity = document.getElementById("txt_velo2").value;
     }
 
 
@@ -60,9 +75,9 @@
     window.external.StopWheel();
 */
 
-    SetHeadYaw(45, 50);
+    //SetHeadYaw(45, 50);
     //DriveWheelTime(0, -AngularVelocity, Second);
-    SetWaistPitch(-20, 50);
+    //SetWaistPitch(-20, 50);
 </script>
 
 
