--- a/maincontents.htm
+++ b/maincontents.htm
@@ -37,7 +37,7 @@
     <tr>
         <td>
             Yaw: <input id="txt_yaw" type="text" width="50">
-            Velocity: <input id="velo2" type="text" width="50">
+            Velocity: <input id="txt_velo2" type="text" width="50">
         </td>
         <td>
             <button onclick="setHeadYaw()"> SetHeadYaw() </button>
