--- a/maincontents.htm
+++ b/maincontents.htm
@@ -59,6 +59,7 @@
     {
         var yaw = document.getElementById("txt_yaw").value;
         var velocity = document.getElementById("txt_velo2").value;
+        SetHeadYaw(yaw,velocity);
     }
 
 
