--- a/maincontents.htm
+++ b/maincontents.htm
@@ -76,7 +76,9 @@
         var lv = document.getElementById("txt_lv").value;
         var av = document.getElementById("txt_av").value;
         var sec = document.getElementById("txt_sec").value;
+        SetWaistPitch(-20, 50);
         DriveWheelTime(lv, av, sec);
+
     }
 
 
